# ViewYUV

./: .gitignore  README.md  pyproject.toml  requirements.txt
resources/: icon.icns  viewYUV.desktop
scripts/: build_all.py  build_installer.iss  gen_test_yuv.py  generate_icons.py  pyinstaller_entry.py
src/yuvviewer/: __init__.py  __main__.py  colorconvert.py  formats.py  metrics.py  render.py  yuv_file.py
src/yuvviewer/ui/: compare_widget.py  decode_worker.py  main_window.py  metrics_dialog.py  metrics_worker.py  open_dialog.py  viewer_widget.py
tests/: test_against_ffmpeg.py  test_colorconvert.py  test_formats.py  test_metrics.py
