[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yuvviewer"
version = "0.1.0"
description = "Cross-platform viewer/comparator for raw, headerless YUV video files"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
dependencies = [
    "PySide6>=6.6",
    "numpy>=1.26",
    "scikit-image>=0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
yuvviewer = "yuvviewer.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
